--- a/css/infinity-box.css
+++ b/css/infinity-box.css
@@ -40,6 +40,11 @@ h6 {
   letter-spacing: 1px;
 }
 
+.tagline {
+  font-size: 30px;
+  text-shadow: 1px 1px darkgray;
+}
+
 p {
   font-size: 18px;
   line-height: 1.5;
@@ -90,7 +95,7 @@ section h2 {
 
 #mainNav .navbar-nav > li > a.active {
   color: #00FA9A !important;
-  background-color: transparent;
+  background-color: white;
 }
 
 #mainNav .navbar-nav > li > a.active:hover {
@@ -110,7 +115,7 @@ section h2 {
 @media (min-width: 992px) {
   #mainNav {
     border-color: transparent;
-    background-color: transparent;
+    background-color: white;
   }
   #mainNav .navbar-brand {
     color: fade(white, 70%);
@@ -189,7 +194,9 @@ header.masthead .device-container .screen img {
     text-align: left;
   }
   header.masthead .header-content h1 {
-    font-size: 50px;
+    font-size: 90px;
+    color: #3CB371;
+    text-shadow: 2px 2px black;
   }
   header.masthead .device-container {
     max-width: 325px;
@@ -283,7 +290,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/escuela-1000x500.jpg");
+  background-image: url("../img/lilypads.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -313,69 +320,18 @@ section.cta .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-section.contact {
-  text-align: center;
-}
-
-section.contact h2 {
-  margin-top: 0;
-  margin-bottom: 25px;
-}
-
-section.contact h2 i {
-  color: #dd4b39;
-}
-
-section.contact ul.list-social {
-  margin-bottom: 0;
-}
-
-section.contact ul.list-social li a {
-  font-size: 40px;
-  line-height: 80px;
-  display: block;
-  width: 80px;
-  height: 80px;
-  color: white;
-  border-radius: 100%;
-}
-
-section.contact ul.list-social li.social-twitter a {
-  background-color: #1da1f2;
-}
-
-section.contact ul.list-social li.social-twitter a:hover {
-  background-color: #0d95e8;
-}
-
-section.contact ul.list-social li.social-facebook a {
-  background-color: #3b5998;
-}
-
-section.contact ul.list-social li.social-facebook a:hover {
-  background-color: #344e86;
-}
-
-section.contact ul.list-social li.social-google-plus a {
-  background-color: #dd4b39;
-}
-
-section.contact ul.list-social li.social-google-plus a:hover {
-  background-color: #d73925;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 footer {
   padding: 25px 0;
   text-align: center;
   color: rgba(255, 255, 255, 0.3);
-  background-color: #222222;
+  background-color: #000;
 }
 
 footer p {
-  font-size: 12px;
+  font-size: 14px;
   margin: 0;
 }
 
@@ -393,7 +349,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: #00FA9A;
+  background: #3CB371;
 }
 
 .text-primary {
@@ -422,6 +378,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
   letter-spacing: 2px;
   text-transform: uppercase;
+  background-color: rgb(226, 226, 226);
 }
 
 .btn-xl {
