--- a/css/infinity-box.css
+++ b/css/infinity-box.css
@@ -67,6 +67,7 @@ section h2 {
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
+  padding: 0;
 }
 
 #mainNav .navbar-brand {
@@ -83,7 +84,7 @@ section h2 {
 #mainNav .navbar-toggler {
   font-size: 12px;
   padding: 8px 10px;
-  color: #222222;
+  color: rgb(58,59,62);
 }
 
 #mainNav .navbar-nav > li > a {
@@ -115,17 +116,17 @@ section h2 {
 @media (min-width: 992px) {
   #mainNav {
     border-color: transparent;
-    background-color: white;
+    background-color: rgb(58,59,62);
   }
   #mainNav .navbar-brand {
     color: fade(white, 70%);
   }
   #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-    color: black;
+    color: rgb(58,59,62);
   }
   #mainNav .navbar-nav > li > a,
   #mainNav .navbar-nav > li > a:focus {
-    color: black;
+    color: white;
   }
   #mainNav .navbar-nav > li > a:hover,
   #mainNav .navbar-nav > li > a:focus:hover {
@@ -157,7 +158,7 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: #000;
-  background-image: url('../img/classroom.jpg');
+  background-image: url('../img/classroom_at_angle.png');
   background-size:cover;
   background-repeat: no-repeat;
 }
@@ -173,9 +174,10 @@ header.masthead .header-content h1 {
 }
 
 header.masthead .device-container {
-  max-width: 325px;
+  min-width: 425px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 100px;
 }
 
 header.masthead .device-container .screen img {
@@ -290,7 +292,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/lilypads.jpg");
+  background-image: url("../img/view_from_back_of_classroom.png");
   background-position: center;
   background-size: cover;
 }
@@ -307,7 +309,7 @@ section.cta .cta-content h2 {
   margin-bottom: 25px;
   color: white;
 }
-
+ 
 @media (min-width: 768px) {
   section.cta .cta-content h2 {
     font-size: 80px;
@@ -353,7 +355,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .text-primary {
-  color: #00FA9A;
+  color: #3CB371;
 }
 
 .no-gutter > [class*='col-'] {
@@ -369,8 +371,8 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
   color: white;
-  border-color: #00FA9A;
-  background-color: #00FA9A;
+  border-color: white;
+  background-color: #3CB371;
 }
 
 .btn {
