--- a/css/infinity-box.css
+++ b/css/infinity-box.css
@@ -31,7 +31,6 @@ hr.light {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
@@ -40,6 +39,11 @@ h6 {
   letter-spacing: 1px;
 }
 
+h3 {
+  text-shadow: 1px 1px darkgray;
+  font-size: 50px;
+  font-weight: 600;
+}
 .tagline {
   font-size: 30px;
   text-shadow: 1px 1px darkgray;
@@ -59,9 +63,13 @@ section h2 {
   font-size: 50px;
 }
 
+.container {
+  padding: 0px;
+}
+
 #mainNav {
   border-color: rgba(34, 34, 34, 0.05);
-  background-color: white;
+  background-color: rgb(58,59,62);
   -webkit-transition: all .35s;
   transition: all .35s;
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
@@ -84,7 +92,8 @@ section h2 {
 #mainNav .navbar-toggler {
   font-size: 12px;
   padding: 8px 10px;
-  color: rgb(58,59,62);
+  color: white;
+  border: 1px solid white;
 }
 
 #mainNav .navbar-nav > li > a {
@@ -99,9 +108,10 @@ section h2 {
   background-color: white;
 }
 
-#mainNav .navbar-nav > li > a.active:hover {
+/* #mainNav .navbar-nav > li > a.active:hover {
   background-color: transparent;
-}
+  border-bottom: 2px solid #F117B4;
+} */
 
 #mainNav .navbar-nav > li > a,
 #mainNav .navbar-nav > li > a:focus {
@@ -158,7 +168,7 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: #000;
-  background-image: url('../img/classroom_at_angle.png');
+  background-image: url('../img/desktop_red_notebook.png');
   background-size:cover;
   background-repeat: no-repeat;
 }
@@ -174,7 +184,7 @@ header.masthead .header-content h1 {
 }
 
 header.masthead .device-container {
-  min-width: 425px;
+  min-width: 150px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 100px;
@@ -292,7 +302,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/view_from_back_of_classroom.png");
+  background-image: url("../img/frog-butterfly-pond-mirroring.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -328,8 +338,9 @@ section.cta .overlay {
 footer {
   padding: 25px 0;
   text-align: center;
-  color: rgba(255, 255, 255, 0.3);
-  background-color: #000;
+  color: white;
+  background-color: rgb(58, 59, 62);
+  padding: 20px;
 }
 
 footer p {
@@ -371,7 +382,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
   color: white;
-  border-color: white;
+  border-color: black;
   background-color: #3CB371;
 }
 
